Fixed MAGE-3759: Static block in the Main Content Area overlaps border of the catalog of products

--- a/skin/frontend/enterprise/default/css/widgets.css
+++ b/skin/frontend/enterprise/default/css/widgets.css
@@ -64,6 +64,7 @@
 .checkout-cart-index .col1-layout .widget-compared { display:block; padding:0 20px; }
 
 /* Widget CMS Static Block */
+.category-view + .widget-static-block { display:block; padding:40px 0 0; }
 .widget-static-block {}
 
 /* Widget Catalog Events Carousel */
